# UDEC_FEELIT

./: .gitignore  Build_PyInstaller.ps1  README.md  __init__.py  build.spec  passenger_wsgi.py  pyproject.toml  requirements.txt  run_app.py
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  braille.py  config.py  demo_assets.py  haptic_contact_rollout.py  haptic_feedback_design.py  haptic_materials.py  haptic_pilot_commands.py  haptic_runtime_features.py  haptic_scene_contracts.py  haptic_workspace.py  (+4 more)
artifacts/: README.md
docs/: architecture.md  asset_sources.md  development_history.md  haptic_bridge_bootstrap.md  haptic_runtime_design.md  implementation_gap_audit.md  legacy_mapping.md  library_catalog.md  material_profiles.md  references.md  scope_and_motivation.md  theory.md  user_guide.md
installer/: Build_InnoSetup.ps1  FeelIT_installer.iss  pyinstaller_version_info.txt  version.iss
native/: CMakeLists.txt
native/src/: feelit_bridge_probe.cpp
scripts/: Bootstrap_HapticBridge.ps1  browser_scene_smoke.py  bump_version.py  haptic_bridge_diagnostics.py  sync_version.py  validate_repo.py
tests/: __init__.py  test_api.py  test_braille.py  test_browser_scene_smoke.py  test_bump_version.py  test_haptic_bridge_command_ack.py  test_haptic_contact_rollout.py  test_haptic_pilot_commands.py  test_haptic_runtime.py  test_haptic_runtime_features.py  test_haptic_scene_contracts.py  test_haptic_workspace.py  test_library_assets.py  test_model_validation.py  test_native_bridge_probe.py  test_run_app.py  test_snapshot_history.py  test_validate_repo.py  test_versioning.py
(+82 files in other folders)
