[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feelit"
dynamic = ["version"]
description = "Modern FeelIT bootstrap for tactile 3D interaction, Braille reading, and future haptic desktop workflows."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "Felipe Santibanez"},
]
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.0,<9",
  "ruff>=0.6,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.dynamic]
version = {attr = "app.core.version.APP_VERSION"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
